--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">LiberMovies</string>
+    <string name="search">Search</string>
+    <string name="movies">Movies</string>
+    <string name="series">Series</string>
+    <string name="explore">Explore</string>
+    <string name="favorite">Favorite</string>
 </resources>
