--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="story">Story</string>
     <string name="cast">Cast</string>
     <string name="movie_is_missing">Movie is missing</string>
+    <string name="favorites">Favorites</string>
+    <string name="no_favorites">No Favorites</string>
 </resources>
